# version-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: refresh-data.yaml
astro/: astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
astro/public/: _redirects  robots.txt
astro/src/: consts.ts
astro/src/components/: logo.tsx
astro/src/components/badge-accordion/: badge-accordion.tsx
astro/src/components/blocks/changelog-section/: timeline-section.tsx
astro/src/components/blocks/cta-section/: cta-section.tsx
astro/src/components/blocks/faq-section/: faq-section.tsx
astro/src/components/blocks/hero-section/: hero-section.tsx
astro/src/components/layout/: footer.tsx  header.tsx  theme-toggle.tsx
astro/src/components/timeline/: timeline-items.tsx
astro/src/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  navigation-menu.tsx
astro/src/data/: releases.json
astro/src/layouts/: BlankLayout.astro  HeadSeo.astro  Layout.astro
astro/src/lib/: changelog.ts
astro/src/pages/: 404.astro  beta.astro  index.astro  nightly.astro  rss.xml.js  stabilizations.astro  stable.astro  upcoming.astro  versions.astro
astro/src/pages/v/: [version].astro
astro/src/public/: _redirects
astro/src/styles/: global.css
src/: changelog_generator.rs  config.rs  github_client.rs  json_writer.rs  lib.rs  main.rs
tests/: version_manager.rs
