[package]
name = "version-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
octocrab = "0.44.1"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12.15", features = ["trust-dns", "rustls-tls"] }
semver = "1"
regex = "1"
itertools = "0.14.0"
chrono = "0.4"
tap = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pluralizer = "0.5.0"
